@@ -20,14 +20,16 @@
     <string-array name="updates">
         <item>Version 1.36
             \n * Notify user about upcoming DB-clean-up (VACUUM)
-            \n * Improve DB-Locking by enabling it (please don't judge me, it\'s been years since I wrote the line db.setLockingEnabled(false))
-            \n * Small changes, mostly internal stuff</item>
+            \n * Improve DB-Locking by enabling it (please don\'t judge me, it\'s been years since I wrote the line db.setLockingEnabled(false))
+            \n * UI refreshes again when items change (eg. are marked as read, published)
+            \n * Added icons from SDK so all icons look the same
+            \n * Cleaned up the ActionBar
+            \n * Now using API-Level 17</item>
         <item>Version 1.35
             \n * Articles are again marked as read when beeing read in the webinterface as long as there are new articles to be synced (API doesn\'t offer "changes since date/time", I can only guess what has changed)
             \n * Added long-press menu in Article-List: "Mark everything above as read"
             \n * Another attempt at fixing the IllegalStateExceptions
-            \n * Small bugfixes
-            \n * I need help regarding the SQLiteException \"cannot commit transaction - SQL statements in progress: COMMIT\", please contact me if you think you can give any advice on this issue.</item>
+            \n * Small bugfixes</item>
         <item>Version 1.34
             \n * Fixed some DB issues regarding closed cursors
             \n * Fixed automatic refresh of labels on startup
